Converted Library and LibraryBook to use generic type for holder.